# atlanta-fomo-api

./: Cargo.toml  config.ini
src/: main.rs
