[package]
name = "fomo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
raydium-cp-swap = "*"
anyhow = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
solana-sdk = ">=1.14, < 1.19"
configparser = "3.1.0"
base64 = "0.22.1"
cached = "0.53.1"
solana-client = ">=1.14, < 1.19"
bincode = "1.3.3"
arrayref = "0.3.9"
mpl-token-metadata = "3.2.1"

anchor-lang = "0.30.1"
spl-memo = "2.0.1"
rand = "0.8.5"
spl-associated-token-account = "2.2.0"
spl-token-2022 = "0.9.0"
ordered-float = "4.3.0"
spl-token = { version = "^3", features = ["no-entrypoint"] }
anchor-client = "0.30.1"
solana-account-decoder = ">=1.14, < 1.19"

spl-token-client = "*"
actix-cors = "0.7.0"
